# ws2812strip

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
3rd/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/inc/: render.hpp
test/: CMakeLists.txt
